--- a/index.html
+++ b/index.html
@@ -72,10 +72,55 @@
                        </li> 
                     </ul>
                     <div class="entrepreneur">
-                        <a href="">
-                            <i class="xi-paper-o d"></i>
-                            <span>사업자전용</span>
-                        </a>
+                        <i class="xi-paper-o d"></i>
+                        <span>사업자전용</span>
+                    </div>
+                </div>
+                <div class="ent_box">
+                    <div class="e_inner">
+                        <h2>
+                            사업자(도매) 주문 안내
+                        </h2>
+                        <ul class="top">
+                            <li>
+                                <span>
+                                소량 발주 <br />
+                                가능
+                                </span>
+                            </li>
+                            <li>
+                                <span>
+                                편리한 <br />
+                                온라인 발주
+                                </span>
+                            </li>
+                            <li>
+                                <span>
+                                빠른 배송 <br />
+                                (택배 배송)
+                                </span>
+                            </li>
+                        </ul>
+                        <ul class="bot">
+                            <li>
+                                <i class="xi-check-circle-o icon"></i>
+                                <span>
+                                    최소 3kg 단위부터 소량 단위도 저렴하게 구매 가능합니다. (단품 구매 가능)
+                                </span>
+                            </li>
+                            <li>
+                                <i class="xi-check-circle-o icon"></i>
+                                <span>
+                                    온라인으로 간편하게 구매하세요. (카드 결제 가능/현금 결제시 세금계산서 발행)
+                                </span>
+                            </li>
+                            <li>
+                                <i class="xi-check-circle-o icon"></i>
+                                <span>
+                                    오후 2시 이전 주문시 당일 발송! 사업자용 상품은 모두 무료 배송!
+                                </span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="lnb_con">
